--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@
 #game-header {
     width:100%;
     position: fixed;
+    height: 95px;
+    background-color: aquamarine;
+    border-radius: 20px 25px 20px 25px;
 }
 
 #lives {
